# SHM-Capstone

./: .gitignore  CMakeLists.txt  README.md  hello.c  hello.ilk  test
backend/: export_routes.py  export_utils.py  fault_codes.py  fault_event_ts.py  fault_logger.py  main.py  mqtt_commands.py  mqtt_listener.py  mqtt_listener_control.py  node_registry.py  sensor_export_decoder.py  sensor_health_cache.py  server_management.py  settings_schema.py  settings_store.py
backend/auth/: __init__.py  auth_db.py  auth_dependencies.py  auth_models.py  auth_repository.py  auth_routes.py  auth_security.py
dataStorage/: [UNTEST]alldata_test.py  [UNTEST]multiple_nodes_test.py  accel_mqtt_pub.py  accel_simulator.py  alldata_test.py  data_acq_sd.py  data_mqtt_sub.py  data_sub_binary.py  debug_binary.py  decode_binary.py  delta_encoder.py  encoder_storage.py  mqtt_listener.py  mqtt_listener_data.py  raw_backup.py  sim_sensor.py  testfile.py
firmware/: .cproject  .gitignore  .project  sdkconfig  sdkconfig.old
firmware/main/: .gitignore  CMakeLists.txt  adt7420.c  adt7420.h  adxl355.c  adxl355.h  data_processing_and_mqtt_task.c  data_processing_and_mqtt_task.h  ethernet.c  ethernet.h  fake_daq_task.c  fake_daq_task.h  fault_log.c  fault_log.h  i2c_bus.c  i2c_bus.h  i2c_master_init.c  idf_component.yml  main.c  mqtt.c  mqtt.h  node_config.c  node_config.h  scl3300.c  scl3300.h  sensor_task.c  sensor_task.h  sensor_types.h  sntp_sync.c  sntp_sync.h  spi_bus.c  spi_bus.h
kokok/: test copy.c
shm-dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+102 files in other folders)
